# build-ui

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
build_ui/: __init__.py  _qt.py  widgets.py
docs/: ENTERPRISE-READINESS.md
docs/brand/: README.md
docs/superpowers/plans/: 2026-07-10-build-ui-2-qt-bridge.md
docs/superpowers/specs/: 2026-07-10-build-ui-2-qt-bridge-design.md
quanta_ui/: __init__.py  theme.py  widgets.py
scripts/: verify_wheel.py
tests/: qt_binding_probe.py  qt_selection_mismatch_probe.py  test_packaging_contract.py  test_release_contract.py  test_theme.py  test_widget_behavior.py
