[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "build-ui"
dynamic = ["version"]
description = "Binding-neutral Qt theme and widgets for the Build ecosystem"
readme = "README.md"
license = "LicenseRef-FSL-1.1-MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [
    { name = "Zain Dana Harper" },
]
requires-python = ">=3.10"
dependencies = [
    "QtPy>=2.4.3,<3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/HarperZ9/build-ui"
Repository = "https://github.com/HarperZ9/build-ui"
Issues = "https://github.com/HarperZ9/build-ui/issues"

[project.optional-dependencies]
pyqt6 = ["PyQt6>=6.5,<7"]
pyside6 = ["PySide6>=6.11.1,<7"]
test = ["pytest>=8.0", "pytest-cov>=5", "tomli>=2,<3"]
dev = ["pytest>=8.0", "pytest-cov>=5", "tomli>=2,<3", "ruff>=0.6", "mypy>=1.10", "build>=1.2"]

[tool.setuptools.dynamic]
version = {attr = "build_ui.__version__"}

[tool.setuptools.packages.find]
include = ["build_ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["build_ui"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.10"
files = ["build_ui"]
# PyQt6 ships no type stubs.
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "I",     # isort
]
ignore = ["E501", "E701", "E702", "E741", "B905", "SIM102", "SIM105", "SIM108", "SIM112", "SIM117", "E402", "SIM113", "SIM115"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are intentional in __init__ files

[tool.ruff.format]
quote-style = "double"
